<resources>
    <string name="app_name">Trivia</string>
    <string name="what_s_your_mame">What is your mame ?</string>
    <string name="next">Next</string>
    <string name="option1">Sachin Tendulkar</string>
    <string name="option2">Virat Kolli</string>
    <string name="option3">Adam Gilchrist</string>
    <string name="option4">Jacques Kallis</string>
    <string name="question2">Who is the best cricketer in the world ?</string>
    <string name="question3">What are the colors in the national flag ?</string>
    <string name="options">Options</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="violet">Violet</string>
    <string name="finish">Finish</string>
    <string name="history">History</string>
    <string name="summary">SUMMARY</string>
    <string name="selected_answer">Here are the answers selected:</string>
</resources>