<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/horizontal"
    android:layout_marginEnd="@dimen/horizontal"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <RadioGroup
        android:id="@+id/selectPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option4" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner"

        android:text="@string/next"
        android:textSize="@dimen/text_size" />

</LinearLayout>